[gd_scene load_steps=32 format=2]

[ext_resource path="res://characters/DragonTeenAnimations.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/DragonTeen.gd" type="Script" id=2]
[ext_resource path="res://characters/DragonTeenStates.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/dragon/teen/teen_die.wav" type="AudioStream" id=5]
[ext_resource path="res://utils/MultiAudioPlayer2D.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sfx/dragon/teen/teen_fireball_cast01.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sfx/dragon/teen/teen_fireball_cast02.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sfx/dragon/teen/teen_flap_wings01.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/dragon/teen/teen_flap_wings02.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/dragon/teen/teen_flap_wings03.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/dragon/teen/teen_flap_wings04.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/dragon/teen/teen_hurt01.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sfx/dragon/teen/teen_hurt02.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sfx/dragon/teen/teen_knockout01.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sfx/dragon/teen/teen_knockout02.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sfx/dragon/teen/teen_land01.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sfx/dragon/teen/teen_land02.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/sfx/dragon/teen/teen_swipe01.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/sfx/dragon/teen/teen_swipe02.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/sfx/dragon/baby/baby_to_teen.wav" type="AudioStream" id=21]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 hit_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float hit_strength : hint_range(0.0,1.0) = 0.0;

void fragment() {
	vec4 custom_color = texture(TEXTURE, UV);
	custom_color.rgb = mix(custom_color.rgb, hit_color.rgb, hit_strength);
	COLOR = custom_color;
}"

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/hit_color = Color( 1, 1, 1, 1 )
shader_param/hit_strength = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.799, 10 )

[sub_resource type="CircleShape2D" id=11]
radius = 23.0217

[sub_resource type="AudioStreamRandomPitch" id=3]
resource_local_to_scene = true

[sub_resource type="AudioStreamRandomPitch" id=4]
resource_local_to_scene = true

[sub_resource type="AudioStreamRandomPitch" id=5]
resource_local_to_scene = true

[sub_resource type="AudioStreamRandomPitch" id=6]
resource_local_to_scene = true

[sub_resource type="AudioStreamRandomPitch" id=7]
resource_local_to_scene = true

[sub_resource type="AudioStreamRandomPitch" id=8]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 5 )

[node name="DragonTeen" type="KinematicBody2D" groups=["hittable"]]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="DragonTeenStates" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Pivot" type="Node2D" parent="."]

[node name="DragonTeenAnimations" parent="Pivot" instance=ExtResource( 1 )]
material = SubResource( 10 )
animation = "down"

[node name="Hitbox" type="Area2D" parent="Pivot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Hitbox"]
position = Vector2( -10, -22 )
rotation = 0.785397
shape = SubResource( 2 )

[node name="SwipePos" type="Position2D" parent="Pivot"]
position = Vector2( -17, -21 )

[node name="FireballPos" type="Position2D" parent="Pivot"]
position = Vector2( -16, -33 )

[node name="MouthPos" type="Position2D" parent="Pivot"]
position = Vector2( 24, -19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 11 )

[node name="IdleWaitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="FireballSFX" parent="." instance=ExtResource( 6 )]
stream = SubResource( 3 )
audio_streams = [ ExtResource( 7 ), ExtResource( 8 ) ]

[node name="FlapSFX" parent="." instance=ExtResource( 6 )]
stream = SubResource( 4 )
audio_streams = [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ]

[node name="HurtSFX" parent="." instance=ExtResource( 6 )]
stream = SubResource( 5 )
audio_streams = [ ExtResource( 13 ), ExtResource( 14 ) ]

[node name="DownSFX" parent="." instance=ExtResource( 6 )]
stream = SubResource( 6 )
audio_streams = [ ExtResource( 15 ), ExtResource( 16 ) ]

[node name="LandSFX" parent="." instance=ExtResource( 6 )]
stream = SubResource( 7 )
audio_streams = [ ExtResource( 17 ), ExtResource( 18 ) ]

[node name="SwipeSFX" parent="." instance=ExtResource( 6 )]
stream = SubResource( 8 )
audio_streams = [ ExtResource( 19 ), ExtResource( 20 ) ]

[node name="EvolveSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )
bus = "SFX"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 9 )

[connection signal="animation_finished" from="Pivot/DragonTeenAnimations" to="." method="_on_DragonTeenAnimations_animation_finished"]
[connection signal="frame_changed" from="Pivot/DragonTeenAnimations" to="." method="_on_DragonTeenAnimations_frame_changed"]
